@@ -43,3 +43,8 @@ Feature: Select List
     When I find a select list while the script is executing
     Then I should see that the select list exists
     And I should be able to select "Test 2" from the list
+
+  Scenario: Getting the selected option
+    When I select "Test 2" from the select list
+    Then the selected option should be "Test 2"
+
